Don't load globe on mobile. Globe positioning tweaks to avoid scrollbars.

--- a/news-globe/globe.css
+++ b/news-globe/globe.css
@@ -17,15 +17,15 @@ canvas {
 	position: absolute;
 	top: -20px;
 	flex-direction: row;
-	width: 100%;
+	width: 99%;
 	justify-content: center;
 	align-items: center;
 	height: 700px;
 }
 .globe {
 	position: absolute;
-	top: 60px;
-	right: -30px;
+	top: 0;
+	right: 0;
 	z-index: 2;
 }
 .globe canvas {
